--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
      <p style="text-align: center">Sinta-se em casa no StreetSwag 90's, onde a moda se torna uma forma de arte e as ruas são a nossa inspiração. 
       Prepare-se para se destacar e se inspirar, pois o Streetwear está apenas a um clique de distância.</p>
     
+    <h2> O que oferecemos</h2>
+    <ul>
+       <li  class="itens">Assistende virtual</li>
+       <li  class="itens" >Conhecimento sobre estilos</li>
+       <li  class="itens">Links de Lojas confiaveis</li>
+       <li  class="itens">Dicas de moda</li>
+</ul>
+
+
+
 
     </body>
 </html>
