--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <body>
 
           <img src="streetwear-800x534.webp" style="
-          height: 400px
-          ">
+          height:85%;
+          width:100% ;
           
 
 <h1>StreeSwag 90's</h1>
